--- a/extension-manifest-v3/src/pages/onboarding/index.html
+++ b/extension-manifest-v3/src/pages/onboarding/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#00AEF0" />
+    <meta name="theme-color" content="#000000" />
     <title>Welcome to Ghostery</title>
     <script src="./index.js" async type="module"></script>
     <link rel="stylesheet" href="./styles.css" />
