[v3] use trackers-preview from ui package

--- a/extension-manifest-v3/src/pages/trackers-preview/index.html
+++ b/extension-manifest-v3/src/pages/trackers-preview/index.html
@@ -11,6 +11,6 @@
     <script src="./index.js" type="module" async></script>
   </head>
   <body>
-    <wtm-trackers-preview></wtm-trackers-preview>
+    <gh-trackers-preview></gh-trackers-preview>
   </body>
 </html>
