--- a/extension-manifest-v3/src/pages/options/index.html
+++ b/extension-manifest-v3/src/pages/options/index.html
@@ -11,6 +11,6 @@
     <script type="module" src="./index.js" async></script>
   </head>
   <body>
-    <ghostery-options></ghostery-options>
+    <gh-options></gh-options>
   </body>
 </html>
