--- a/extension-manifest-v3/src/pages/autoconsent/index.html
+++ b/extension-manifest-v3/src/pages/autoconsent/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
-    />
-    <script type="module" src="./index.js" async></script>
+    <meta name="viewport" content="width=device-width" />
+    <title>Never-Consent</title>
+    <script type="module" src="./index.js"></script>
   </head>
   <body>
     <gh-autoconsent></gh-autoconsent>
