--- a/extension-manifest-v3/src/pages/onboarding/index.html
+++ b/extension-manifest-v3/src/pages/onboarding/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <meta name="theme-color" content="#000000" />
     <title>Welcome to Ghostery</title>
-    <script src="./index.js" async type="module"></script>
+    <script src="./index.js" type="module"></script>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
