--- a/extension-manifest-v3/src/pages/options/index.html
+++ b/extension-manifest-v3/src/pages/options/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Ghostery Options</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
-    />
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
-    <meta content="utf-8" http-equiv="encoding" />
-    <script type="module" src="./index.js" async></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Ghostery Settings</title>
+    <script type="module" src="./index.js"></script>
   </head>
   <body>
     <gh-options></gh-options>
