--- a/extension-manifest-v3/src/pages/trackers-preview/index.html
+++ b/extension-manifest-v3/src/pages/trackers-preview/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Whotracks.me Report</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
-    />
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
-    <meta content="utf-8" http-equiv="encoding" />
-    <script src="./index.js" type="module" async></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Trackers Preview</title>
+    <script src="./index.js" type="module"></script>
   </head>
   <body>
     <gh-trackers-preview></gh-trackers-preview>
