--- a/extension-manifest-v3/src/pages/panel/index.html
+++ b/extension-manifest-v3/src/pages/panel/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Ghostery Panel</title>
+    <title>Ghostery panel</title>
     <link rel="stylesheet" href="./styles.css" />
     <script type="module" src="./index.js"></script>
   </head>
