--- a/extension-manifest-v3/src/pages/options/index.html
+++ b/extension-manifest-v3/src/pages/options/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Ghostery Settings</title>
+    <title>Ghostery settings</title>
     <script type="module" src="./index.js"></script>
   </head>
   <body>
