--- a/extension-manifest-v3/src/pages/panel/index.html
+++ b/extension-manifest-v3/src/pages/panel/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
-    />
+    <meta name="viewport" content="width=device-width" />
+    <title>Ghostery panel</title>
     <link rel="stylesheet" href="./styles.css" />
-    <script type="module" src="./index.js" async></script>
+    <script type="module" src="./index.js"></script>
   </head>
   <body>
     <panel-root></panel-root>
