--- a/extension-manifest-v3/src/pages/panel/index.html
+++ b/extension-manifest-v3/src/pages/panel/index.html
@@ -8,6 +8,6 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <panel-root></panel-root>
+    <gh-panel></gh-panel>
   </body>
 </html>
