--- a/extension-manifest-v3/src/pages/panel/index.html
+++ b/extension-manifest-v3/src/pages/panel/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, viewport-fit=cover" />
     <title>Ghostery panel</title>
-    <link rel="stylesheet" href="./styles.css" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
