--- a/extension-manifest-v3/src/pages/panel/index.html
+++ b/extension-manifest-v3/src/pages/panel/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width" />
     <title>Ghostery panel</title>
     <script type="module" src="./index.js"></script>
   </head>
