--- a/extension-manifest-v3/src/pages/settings/index.html
+++ b/extension-manifest-v3/src/pages/settings/index.html
@@ -7,6 +7,6 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <gh-options></gh-options>
+    <gh-settings></gh-settings>
   </body>
 </html>
