Update settings pages

--- a/extension-manifest-v3/src/pages/settings/index.html
+++ b/extension-manifest-v3/src/pages/settings/index.html
@@ -7,6 +7,6 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <gh-settings></gh-settings>
+    <gh-settings-main></gh-settings-main>
   </body>
 </html>
