--- a/extension-manifest-v3/src/pages/panel/index.html
+++ b/extension-manifest-v3/src/pages/panel/index.html
@@ -6,7 +6,7 @@
     <title>Ghostery panel</title>
     <script type="module" src="./index.js"></script>
   </head>
-  <body>
+  <body tabindex="0">
     <gh-panel-main></gh-panel-main>
   </body>
 </html>
