--- a/extension-manifest-v3/src/pages/settings/index.html
+++ b/extension-manifest-v3/src/pages/settings/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Ghostery settings</title>
+    <script type="module" src="@ghostery/ui/settings"></script>
     <script type="module" src="./index.js"></script>
   </head>
   <body>
