Add async attribute for faster in order execution

--- a/extension-manifest-v3/src/pages/trackers-preview/index.html
+++ b/extension-manifest-v3/src/pages/trackers-preview/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Trackers Preview</title>
-    <script src="./index.js" type="module"></script>
+    <script src="./index.js" type="module" async></script>
   </head>
   <body>
     <gh-trackers-preview></gh-trackers-preview>
