Add initial support for Firefox

--- a/extension-manifest-v3/src/pages/onboarding/index.html
+++ b/extension-manifest-v3/src/pages/onboarding/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <meta name="theme-color" content="#000000" />
     <title>Welcome to Ghostery</title>
-    <script src="./index.js" type="module" async></script>
+    <script src="./index.js" type="module"></script>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
