--- a/extension-manifest-v3/src/pages/panel/index.html
+++ b/extension-manifest-v3/src/pages/panel/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Ghostery panel</title>
-    <script async type="module" src="./index.js" async></script>
+    <script async type="module" src="./index.js"></script>
   </head>
   <body tabindex="0">
     <gh-panel-main></gh-panel-main>
+    haha
   </body>
 </html>
