--- a/extension-manifest-v3/src/pages/autoconsent/index.html
+++ b/extension-manifest-v3/src/pages/autoconsent/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Never-Consent</title>
-    <script type="module" src="./index.js" async></script>
+    <script type="module" src="./index.js"></script>
   </head>
   <body>
     <gh-autoconsent></gh-autoconsent>
