Use local Roboto fonts

--- a/extension-manifest-v3/xcode/Shared (App)/Resources/Main.html
+++ b/extension-manifest-v3/xcode/Shared (App)/Resources/Main.html
@@ -6,12 +6,6 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="./Style.css" />
     <script src="./Script.js" defer></script>
   </head>
@@ -26,9 +20,7 @@
       </section>
 
       <section class="platform-ios">
-        <p data-i18n>
-          To enable privacy protection, go to:
-        </p>
+        <p data-i18n>To enable privacy protection, go to:</p>
         <div id="ios-settings-path">
           <div>
             <img src="./Settings.svg" alt="Settings" />
