Update iOS/macOS app copy

--- a/extension-manifest-v3/xcode/Shared (App)/Resources/Main.html
+++ b/extension-manifest-v3/xcode/Shared (App)/Resources/Main.html
@@ -59,7 +59,7 @@
           <span data-i18n>Enjoying Ghostery?</span> <br />
           <span class="small" data-i18n>Support what we do</span>
         </h2>
-        <button id="button-subscribe" data-i18n>Subscribe now</button>
+        <button id="button-subscribe" data-i18n>Become a contributor</button>
       </section>
 
       <section>
