--- a/extension-manifest-v3/src/pages/panel/index.html
+++ b/extension-manifest-v3/src/pages/panel/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Ghostery panel</title>
-    <script async type="module" src="./index.js" async></script>
+    <script type="module" src="./index.js" async></script>
   </head>
   <body tabindex="0">
     <gh-panel-main></gh-panel-main>
