--- a/extension-manifest-v3/src/pages/onboarding/opera-serp.html
+++ b/extension-manifest-v3/src/pages/onboarding/opera-serp.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>More ad blocking available</title>
-    <script src="./serp.js" type="module" async></script>
+    <script src="./opera-serp.js" type="module" async></script>
   </head>
   <body></body>
 </html>
