--- a/extension-manifest-v3/src/background/index.html
+++ b/extension-manifest-v3/src/background/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <script src="./safari/register.js"></script>
     <script type="module" src="./index.js" async></script>
   </head>
   <body></body>
