Add Firefox support

--- a/src/pages/trackers-preview/index.html
+++ b/src/pages/trackers-preview/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Trackers Preview</title>
-    <script src="./index.js" type="module" async></script>
+    <script src="./index.js" type="module"></script>
   </head>
   <body></body>
 </html>
