--- a/src/pages/panel/index.html
+++ b/src/pages/panel/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Ghostery panel</title>
-    <script type="module" src="./index.js" async></script>
+    <script type="module" src="./index.js"></script>
   </head>
   <body tabindex="0"></body>
 </html>
