chore(tests): Add  e2e tests for custom filters

--- a/tests/e2e/page.html
+++ b/tests/e2e/page.html
@@ -6,10 +6,19 @@
     <title>E2E Test Page</title>
   </head>
   <body>
+    <h1>Test Page</h1>
     <!-- Ad-Blocking CSS container -->
     <ad-slot style="display: block; height: 100px; background: red"></ad-slot>
+
     <!-- Anti-tracking tracking requests -->
     <script src="https://connect.facebook.net/en_US/fbevents.js"></script>
     <script src="https://s.pinimg.com/ct/core.js"></script>
+
+    <!-- Custom Filters -->
+    <script src="https://www.exmaple.com/track.js"></script>
+    <div
+      id="custom-filter"
+      style="display: block; height: 100px; background: blue"
+    ></div>
   </body>
 </html>
