--- a/src/pages/panel/index.html
+++ b/src/pages/panel/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Ghostery panel</title>
     <script type="module" src="./index.js"></script>
+    <meta content="light dark" name="color-scheme" />
   </head>
   <body tabindex="0"></body>
 </html>
