--- a/src/pages/trackers-preview/index.html
+++ b/src/pages/trackers-preview/index.html
@@ -6,5 +6,7 @@
     <title>Trackers Preview</title>
     <script src="./index.js" type="module"></script>
   </head>
-  <body></body>
+  <body>
+    <trackers-preview></trackers-preview>
+  </body>
 </html>
