fix: minor updates to the build script and assets

--- a/src/pages/notifications/opera-serp.html
+++ b/src/pages/notifications/opera-serp.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
+    <title>More ad blocking available</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>More ad blocking available</title>
+    <link rel="icon" type="image/png" href="/ui/assets/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/ui/assets/favicon.svg" />
     <script src="./opera-serp.js" type="module" async></script>
   </head>
   <body></body>
