--- a/src/pages/notifications/youtube.html
+++ b/src/pages/notifications/youtube.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
+    <title>Youtube Wall</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Youtube Wall</title>
+    <link rel="icon" type="image/png" href="/ui/assets/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/ui/assets/favicon.svg" />
     <script src="./youtube.js" type="module" async></script>
   </head>
   <body></body>
