--- a/src/pages/settings/index.html
+++ b/src/pages/settings/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>Ghostery settings</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Ghostery settings</title>
+    <link rel="icon" type="image/png" href="/ui/assets/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/ui/assets/favicon.svg" />
     <script type="module" src="./index.js"></script>
   </head>
   <body></body>
