--- a/src/pages/panel/index.html
+++ b/src/pages/panel/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>Ghostery panel</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Ghostery panel</title>
-    <script type="module" src="./index.js"></script>
     <meta content="light dark" name="color-scheme" />
+    <link rel="icon" type="image/png" href="/ui/assets/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/ui/assets/favicon.svg" />
+    <script type="module" src="./index.js"></script>
   </head>
   <body tabindex="0"></body>
 </html>
