fix(trackers-preview): e2e tests & UI clean up (#2108)

--- a/src/pages/trackers-preview/index.html
+++ b/src/pages/trackers-preview/index.html
@@ -8,5 +8,7 @@
     <link rel="icon" type="image/svg+xml" href="/ui/assets/favicon.svg" />
     <script src="./index.js" type="module"></script>
   </head>
-  <body></body>
+  <body>
+    <trackers-preview></trackers-preview>
+  </body>
 </html>
